# MyStep

MyStep1/: CMakeLists.txt  README.md
MyStep1/src/: main.cpp
MyStep2/: README.md
MyStep2/src/: main.cpp
MyStep3/: CMakeLists.txt  README.md
MyStep3/src/: main.cpp  mymath_1.cpp  mymath_1.hpp  mymath_2.cpp  mymath_2.hpp
MyStep4/: CMakeLists.txt  README.md
MyStep4/src/: mymath.cpp  mymath.hpp
Mystep5/: CMakeLists.txt
Mystep5/src/: main.cpp
